MODULE.bazel: move additional MODULE.bazel files to build/bazel
Don't mind me while I cleaning up the root directory 🧹

Change-Id: I81678f56073a5d7acf283e10a08912d75bba4c73
Reviewed-on: https://review.monogon.dev/c/monogon/+/3356
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>
Tested-by: Jenkins CI

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -95,10 +95,10 @@ register_toolchains("@rules_rust//proto/protobuf:default-proto-toolchain")
 
 register_toolchains("//build/rust:prost_efi_toolchain")
 
-include("//:rust.MODULE.bazel")
+include("//build/bazel:rust.MODULE.bazel")
 
-include("//:go.MODULE.bazel")
+include("//build/bazel:go.MODULE.bazel")
 
-include("//:oci.MODULE.bazel")
+include("//build/bazel:oci.MODULE.bazel")
 
-include("//:third_party.MODULE.bazel")
+include("//build/bazel:third_party.MODULE.bazel")
