cli/metroctl: add metroctl_lite for use in tests
It is the same target just without any data dependencies to ensure we
dont have large dependency tree when running tests.

Change-Id: Iebd0fbd880de07bbd853ea8dce8e9fbb193506af
Reviewed-on: https://review.monogon.dev/c/monogon/+/3372
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/metropolis/test/launch/BUILD.bazel
+++ b/metropolis/test/launch/BUILD.bazel
@@ -11,7 +11,7 @@ go_library(
         "swtpm.go",
     ],
     data = [
-        "//metropolis/cli/metroctl",
+        "//metropolis/cli/metroctl:metroctl_lite",
         "//metropolis/node:image",
         "//metropolis/test/nanoswitch:initramfs",
         "//metropolis/test/swtpm/certtool",
@@ -31,7 +31,7 @@ go_library(
         "xSwtpmLocalCAPath": "$(rlocationpath @swtpm//:swtpm_localca )",
         "xSwtpmCertPath": "$(rlocationpath //metropolis/test/swtpm/swtpm_cert )",
         "xCerttoolPath": "$(rlocationpath //metropolis/test/swtpm/certtool )",
-        "xMetroctlPath": "$(rlocationpath //metropolis/cli/metroctl )",
+        "xMetroctlPath": "$(rlocationpath //metropolis/cli/metroctl:metroctl_lite )",
         "xOvmfVarsPath": "$(rlocationpath //third_party/edk2:OVMF_VARS.fd )",
         "xOvmfCodePath": "$(rlocationpath //third_party/edk2:OVMF_CODE.fd )",
         "xKernelPath": "$(rlocationpath //osbase/test/ktest:linux-testing )",
