--- a/metropolis/cli/metroctl/BUILD.bazel
+++ b/metropolis/cli/metroctl/BUILD.bazel
@@ -32,13 +32,6 @@ go_library(
         "rpc.go",
         "table_node.go",
     ],
-    data = select({
-        ":buildkind_lite": [],
-        "//conditions:default": [
-            "//metropolis/installer:kernel",
-            "//metropolis/node:bundle",
-        ],
-    }),
     importpath = "source.monogon.dev/metropolis/cli/metroctl",
     visibility = ["//visibility:private"],
     deps = [
@@ -69,6 +62,22 @@ go_library(
 
 go_binary(
     name = "metroctl",
+    data = select({
+        ":buildkind_lite": [],
+        "//conditions:default": [
+            "//metropolis/installer:kernel",
+            "//metropolis/node:bundle",
+        ],
+    }),
     embed = [":metroctl_lib"],
     visibility = ["//visibility:public"],
+)
+
+# metroctl_lite is the same binary as normal metroctl, but without any data
+# dependencies.
+go_binary(
+    name = "metroctl_lite",
+    data = [],
+    embed = [":metroctl_lib"],
+    visibility = ["//metropolis:__subpackages__"],
 )
