tconsole: add status bar
This adds a status bar to the bottom of the tconsole. It contains a page
selector and clock.

Change-Id: Ia932fe793ff067f3d096046d8bd93c060bac807a
Reviewed-on: https://review.monogon.dev/c/monogon/+/3381
Tested-by: Jenkins CI
Reviewed-by: Leopold Schabel <leo@monogon.tech>

--- a/metropolis/node/core/tconsole/BUILD.bazel
+++ b/metropolis/node/core/tconsole/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
         "colors.go",
         "draw.go",
         "page_status.go",
+        "statusbar.go",
         "tconsole.go",
     ],
     importpath = "source.monogon.dev/metropolis/node/core/tconsole",
