tconsole: add logs page
This is a basic log console. Future work can be performed to make the
display more compact, allow scrollback functionality and maybe scrolling
to the sides to see longer lines.

Change-Id: I81defe874542acfe89137035d0fc6de9861d3e33
Reviewed-on: https://review.monogon.dev/c/monogon/+/3382
Reviewed-by: Leopold Schabel <leo@monogon.tech>
Tested-by: Jenkins CI

--- a/metropolis/node/core/tconsole/BUILD.bazel
+++ b/metropolis/node/core/tconsole/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "colors.go",
         "draw.go",
+        "page_logs.go",
         "page_status.go",
         "statusbar.go",
         "tconsole.go",
@@ -17,6 +18,7 @@ go_library(
         "//metropolis/proto/common",
         "//metropolis/version",
         "//osbase/event",
+        "//osbase/logtree",
         "//osbase/supervisor",
         "//version",
         "@com_github_gdamore_tcell_v2//:tcell",
