--- a/metropolis/node/core/consensus/BUILD.bazel
+++ b/metropolis/node/core/consensus/BUILD.bazel
@@ -23,6 +23,7 @@ go_library(
         "//osbase/logtree/unraw",
         "//osbase/pki",
         "//osbase/supervisor",
+        "@io_etcd_go_etcd_api_v3//etcdserverpb",
         "@io_etcd_go_etcd_client_v3//:client",
         "@io_etcd_go_etcd_server_v3//embed",
     ],
