osbase/efivarfs: implement OsIndications
This allows easy interfacing with EFI's OsIndications mechanism.

https: //uefi.org/specs/UEFI/2.10/08_Services_Runtime_Services.html#exchanging-information-between-the-os-and-firmware
Change-Id: I6187a9a002ac06a82138ea10676641e3eb00c7a5
Reviewed-on: https://review.monogon.dev/c/monogon/+/3388
Tested-by: Jenkins CI
Reviewed-by: Jan Schär <jan@monogon.tech>

--- a/osbase/efivarfs/BUILD.bazel
+++ b/osbase/efivarfs/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
         "boot.go",
         "devicepath.go",
         "efivarfs.go",
+        "osindications.go",
         "variables.go",
     ],
     importpath = "source.monogon.dev/osbase/efivarfs",
