cloud/agent: migrate to bringup package
Change-Id: Ibe89c37cae058395723c9ed5ad5914d62a9af891
Reviewed-on: https://review.monogon.dev/c/monogon/+/3392
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/cloud/agent/BUILD.bazel
+++ b/cloud/agent/BUILD.bazel
@@ -6,7 +6,6 @@ go_library(
         "agent.go",
         "hwreport.go",
         "install.go",
-        "main.go",
     ],
     embedsrcs = [
         "//metropolis/node/core/abloader",  #keep
@@ -19,7 +18,7 @@ go_library(
         "//metropolis/node/core/devmgr",
         "//metropolis/node/core/network",
         "//osbase/blockdev",
-        "//osbase/bootparam",
+        "//osbase/bringup",
         "//osbase/build/mkimage/osimage",
         "//osbase/efivarfs",
         "//osbase/logtree",
