--- a/metropolis/installer/BUILD.bazel
+++ b/metropolis/installer/BUILD.bazel
@@ -5,10 +5,7 @@ load("//osbase/build:efi.bzl", "efi_unified_kernel_image")
 
 go_library(
     name = "installer_lib",
-    srcs = [
-        "log.go",
-        "main.go",
-    ],
+    srcs = ["main.go"],
     embedsrcs = [
         "//metropolis/node/core/abloader",  #keep
     ],
@@ -16,8 +13,10 @@ go_library(
     visibility = ["//visibility:private"],
     deps = [
         "//osbase/blockdev",
+        "//osbase/bringup",
         "//osbase/build/mkimage/osimage",
         "//osbase/efivarfs",
+        "//osbase/supervisor",
         "//osbase/sysfs",
         "@org_golang_x_sys//unix",
     ],
