--- a/metropolis/node/core/update/e2e/testos/BUILD.bazel
+++ b/metropolis/node/core/update/e2e/testos/BUILD.bazel
@@ -16,9 +16,9 @@ go_library(
         "//metropolis/node/core/network",
         "//metropolis/node/core/update",
         "//osbase/blockdev",
+        "//osbase/bringup",
         "//osbase/build/mkimage/osimage",
         "//osbase/gpt",
-        "//osbase/logtree",
         "//osbase/supervisor",
         "@org_golang_x_sys//unix",
     ],
