go/logging: add backends
These are (for now unused) backends for the common Leveled interface.

Change-Id: Ic45e7ea26ad0143500489b05ac6bb20aa7fdbcfb
Reviewed-on: https://review.monogon.dev/c/monogon/+/3431
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/go/logging/BUILD.bazel
+++ b/go/logging/BUILD.bazel
@@ -2,7 +2,10 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "logging",
-    srcs = ["leveled.go"],
+    srcs = [
+        "backend.go",
+        "leveled.go",
+    ],
     importpath = "source.monogon.dev/go/logging",
     visibility = ["//visibility:public"],
 )
