m/n/k/containerd: set device ownership based on security context
When a user deploys a pod with a kvm device it is owned by root. By
setting device_ownership_from_security_context to true, containerd
will chown these devices to the uid/gid set in the securityContext.
For more informations see
https://kubernetes.io/blog/2021/11/09/non-root-containers-and-devices/

Change-Id: I1a0285dfc560c3c662d5e2eb8e37e68d87408b83
Reviewed-on: https://review.monogon.dev/c/monogon/+/3428
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/metropolis/node/kubernetes/containerd/config.toml
+++ b/metropolis/node/kubernetes/containerd/config.toml
@@ -65,6 +65,7 @@ oom_score = 0
     restrict_oom_score_adj = false
     max_concurrent_downloads = 3
     disable_proc_mount = false
+    device_ownership_from_security_context = true
     [plugins."io.containerd.grpc.v1.cri".containerd]
       snapshotter = "overlayfs"
       default_runtime_name = "runc"
