third_party/linux: build at 16 threads, request 16 CPUs
This makes sure we don't overwhelm build machines with a bunch of
parallel kernel builds. That should in turn deflake tests which are
resource-dependent (like E2E tests).

Change-Id: If2758f328d7b2c71c8f405246c6ac41091b4a350
Reviewed-on: https://review.monogon.dev/c/monogon/+/3433
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>
Tested-by: Jenkins CI

--- a/.bazelrc
+++ b/.bazelrc
@@ -29,6 +29,9 @@ import %workspace%/.bazelrc.sandbox
 build --experimental_output_directory_naming_scheme=diff_against_dynamic_baseline
 build --experimental_exec_configuration_distinguisher=off
 
+# Enable resource set configuration via starlark for actions
+build --experimental_action_resource_set
+
 # Hardwire all action envs to just use /usr/bin from the above sandbox. This is
 # necessary on NixOS Bazel builds, as they really like to inject /nix/store/*
 # paths otherwise. We also explicitly set it to /usr/bin only (no /bin) as
