--- a/metropolis/cli/metroctl/test/BUILD.bazel
+++ b/metropolis/cli/metroctl/test/BUILD.bazel
@@ -1,10 +1,8 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
-
-# TODO(q3k): clean this up to just a go_test.
+load("@io_bazel_rules_go//go:def.bzl", "go_test")
 
 go_test(
-    name = "metroctl_test",
-    srcs = ["test.go"],
+    name = "test_test",
+    srcs = ["main_test.go"],
     data = [
         "//metropolis/cli/metroctl",
     ],
@@ -12,22 +10,6 @@ go_test(
     x_defs = {
         "xMetroctlPath": "$(rlocationpath //metropolis/cli/metroctl )",
     },
-    deps = [
-        "//metropolis/node",
-        "//metropolis/test/launch",
-        "//metropolis/test/util",
-        "//metropolis/version",
-        "//osbase/cmd",
-        "//version",
-        "@io_bazel_rules_go//go/runfiles:go_default_library",
-    ],
-)
-
-go_library(
-    name = "test_lib",
-    srcs = ["test.go"],
-    importpath = "source.monogon.dev/metropolis/cli/metroctl/test",
-    visibility = ["//visibility:private"],
     deps = [
         "//metropolis/test/launch",
         "//metropolis/test/util",
