metropolis: support prefixes in node labels
This brings Metropolis node label semantics to be the same as Kubernetes
labels.

Change-Id: I33c321432ec01abf978bb8dfbb3cef90f75a38eb
Reviewed-on: https://review.monogon.dev/c/monogon/+/3467
Tested-by: Jenkins CI
Reviewed-by: Jan Schär <jan@monogon.tech>

--- a/metropolis/node/BUILD.bazel
+++ b/metropolis/node/BUILD.bazel
@@ -21,6 +21,7 @@ go_library(
     deps = [
         "//metropolis/proto/common",
         "@com_github_vishvananda_netlink//:netlink",
+        "@io_k8s_apimachinery//pkg/util/validation",
     ],
 )
 
@@ -145,4 +146,5 @@ go_test(
     name = "node_test",
     srcs = ["labels_test.go"],
     embed = [":node"],
+    deps = ["@io_k8s_apimachinery//pkg/util/validation"],
 )
