metropolis: add boot IDs to status
This allows for precisely determining if a kernel restart has occurred.
Useful for making tests more accurate and relying less on sleeps.

Closes: #357
Change-Id: Ic215b5db841b29b3a3c622333a05be6c35cc6ded
Reviewed-on: https://review.monogon.dev/c/monogon/+/3477
Tested-by: Jenkins CI
Reviewed-by: Tim Windelschmidt <tim@monogon.tech>

--- a/metropolis/node/core/roleserve/BUILD.bazel
+++ b/metropolis/node/core/roleserve/BUILD.bazel
@@ -45,6 +45,7 @@ go_library(
         "//osbase/net/dns",
         "//osbase/pki",
         "//osbase/supervisor",
+        "@com_github_google_uuid//:uuid",
         "@org_golang_google_grpc//:grpc",
         "@org_golang_google_protobuf//encoding/prototext",
         "@org_golang_google_protobuf//proto",
