treewide: update rules_rust to v0.53.0
This updated our patches for rules_rust, removes a transition as it can
be replaced with the "platform" field in the rust_binary rule. This then
allows us to correctly reference it in all targets that depend on it.
Additionally the -target parameter is replaced inside the llvm-efi
toolchain with --target=.

Change-Id: Ie98753e505736c9ef28ff92fa1c5aa5b3612aec3
Reviewed-on: https://review.monogon.dev/c/monogon/+/3473
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -43,11 +43,11 @@ single_version_override(
     module_name = "rules_rust",
     patch_strip = 1,
     patches = [
-        "//third_party:rust-uefi-platform.patch",
-        "//third_party:rust-prost-nostd.patch",
-        "//third_party:rust-reproducibility.patch",
+        "//third_party/rules_rust:rust-uefi-platform.patch",
+        "//third_party/rules_rust:rust-prost-nostd.patch",
+        "//third_party/rules_rust:rust-reproducibility.patch",
     ],
-    version = "0.51.0",
+    version = "0.53.0",
 )
 
 bazel_dep(name = "zlib")
