--- a/metropolis/node/core/abloader/BUILD.bazel
+++ b/metropolis/node/core/abloader/BUILD.bazel
@@ -1,24 +1,18 @@
 load("@rules_rust//rust:defs.bzl", "rust_binary")
-load("//osbase/build:def.bzl", "platform_transition_binary")
 
 rust_binary(
-    name = "abloader_bin",
+    name = "abloader",
     srcs = ["main.rs"],
     edition = "2021",
+    platform = "//build/platforms:efi_amd64",
     target_compatible_with = [
         "@platforms//os:uefi",
     ],
+    visibility = ["//visibility:public"],
     deps = [
         "//metropolis/node/core/abloader/spec:abloader_proto_rs",
         "@crate_index_efi//:prost",
         "@crate_index_efi//:uefi",
         "@crate_index_efi//:uefi-services",
     ],
-)
-
-platform_transition_binary(
-    name = "abloader",
-    binary = ":abloader_bin",
-    target_platform = "//build/platforms:efi_amd64",
-    visibility = ["//visibility:public"],
 )
